# yaca

./: .gitignore  CMakeLists.txt  Makefile  build_test_coverage.sh  crypt.c  crypt.h  crypto_final.h  evp-key-gen.c  readme.txt  todo.txt  yaca.spec
api/crypto/: crypto.h  digest.h  encrypt.h  error.h  key.h  sign.h  simple.h  types.h
api/owl/: crypto.h  digest.h  encrypt.h  key.h  sign.h  simple.h  types.h
api/yaca/: crypto.h  digest.h  encrypt.h  error.h  key.h  keymaster.h  keymaster.hpp  keymaster_defs.h  seal.h  sign.h  simple.h  types.h  yaca_crypto.h  yaca_digest.h  yaca_encrypt.h  yaca_error.h  yaca_key.h  yaca_rsa.h  yaca_seal.h  yaca_sign.h  yaca_simple.h  yaca_types.h
doc/: coding-rules.txt  doxygen.cfg  yaca_doc.h  yaca_encryption_doc.h  yaca_integrity_doc.h  yaca_key_doc.h  yaca_rsa_doc.h  yaca_simple_doc.h
examples/: CMakeLists.txt  Makefile  digest.c  digest_simple.c  encrypt.c  encrypt_aes_gcm.c  encrypt_aes_gcm_ccm.c  encrypt_ccm.c  encrypt_gcm.c  encrypt_simple.c  key_exchange.c  key_gen.c  key_import_export.c  key_import_export_asym.c  key_import_export_sym.c  key_password.c  key_wrap.c  lorem.c  lorem.h  misc.c  misc.h  rsa.c  rsa_private.c  rsa_public.c  seal.c  sign.c  sign_hmac.c  sign_simple.c  sign_simple_cmac.c  test.c  x509.crt  x509.key
packaging/: owl.spec  yaca.spec
python/: CMakeLists.txt  run_all_tests.py
python/yaca/: __init__.py  error.py  library.py  tests.py
src/: CMakeLists.txt  Makefile  config.h  crypto.c  ctx_p.h  debug.c  debug.h  digest.c  encrypt.c  error.c  internal.h  key.c  key_p.h  owl.pc.in  rsa.c  seal.c  sign.c  simple.c  yaca.pc.in
src/include/crypto/: digest.h  encrypt.h  error.h  key.h  sign.h  simple.h  types.h
src/keymaster/: attestation_record.cpp  attestation_record.hpp  hw_auth_token.h  km_version.hpp  openssl_utils.hpp  tags.hpp  wrapped_key.cpp  wrapped_key.hpp  yaca_custom.cpp  yaca_custom.hpp
tests/: CMakeLists.txt  colour_log_formatter.cpp  colour_log_formatter.h  common.cpp  common.h  mock_test_crypto.cpp  mock_test_digest.cpp  mock_test_encrypt.cpp  mock_test_key.cpp  mock_test_rsa.cpp  mock_test_seal.cpp  mock_test_sign.cpp  mock_test_simple.cpp  openssl_mock_functions.h  openssl_mock_impl.c  openssl_mock_impl.h  openssl_mock_redefine.h  test_crypto.cpp  test_debug.cpp  test_digest.cpp  test_encrypt.cpp  test_key.cpp  test_rsa.cpp  test_seal.cpp  test_sign.cpp  test_simple.cpp
